# skid30

./: .gitignore  .gitmodules  CMakeLists.txt  gamelevel.txt  history.txt  lhanotes.txt  log.txt  mac2.txt  notes.md  notes.txt  plan.txt  raylibnotes.txt  readme.md  readme.txt  run.sh  test.bat  test.sh
.github/workflows/: acid600.yml
MyACID500/: gameinfo  genamtrace2.txt  log.txt  steam_appid.txt  sw  test  test.lst  test.s
MyACID500/C/: Avail
MyACID500/Libs/: CrM.library  DRES.LIBRARY  FontEngine.library  GDArexxSupport.library  GoldDisk.library  OwnDevUnit.library  adpro.library  avdb.library  avtextgad.library  backstab.library  commodities.library  cwrite.library  explode.library  fifo.library  gadtoolsbox.library  harlequin.library  hotlinks.library  janus.library  locale.library  monam.libfile  nofrag.library  octaplayer.library  opal.library  opalreq.library  pds.library  req.library  reqtools.library  retina.library  retinaemu.library  specialfx.library  translator.library  traplist.library  trm.library  version.library  vlab.library  wizard.library  xprbplus.library  xprkermit.library  xprzmodem.library
MyACID500/Skid/: skid
MyACID500/Skid/maps/: format.iff
MyACID500/aliens/: aliens11  aliens4  aliens8  aliens9
MyACID500/blitz2/: help
MyACID500/blitz2/src/: GenAm.opts  blitz2  blitz2.lst  blitz2.s  blitz2.s.old  readme.md
MyACID500/blitz2src/: .gitignore  blitz2.lst  blitz2.s  blitz20
MyACID500/oblivion/: oblivion
MyACID500/oblivion/aliens/: aliens1  aliens10  aliens12  aliens13  aliens14  aliens3  aliens5  aliens7
MyACID500/skidaf/: .info
MyACID500/skidaf/gfx/: flag.iff
MyACID500/skidpow30/: Skid
MyACID500/skidpow30/gfx/: cars.palette  flag.iff  num.iff  results.iff  skid.iff
MyACID500/skidpow30/maps/: test.iff  test2.map
ac68000/: ac68000.js  index.html
archive/: SkidMarksDemo.lha  bb2  devpac  dp  genam  genam2  guardian  titlescreen.iff  virus
archive/acidsoftware/: avm.txt  nosegano.txt  originstory.txt
archive/agacars/: Camaro.aga  Caravan.aga  F1.aga  Midget.aga  PORSCHE.aga  Police.aga  TRUCK.aga  cow.aga  mini.aga  vw.aga
archive/amigademomusic/: skidmarks.med
archive/blitz2/: ted.s
archive/cars/: mini.def  source.txt
archive/fonts/: Scala.font
archive/fonts/Scala/: 11
archive/maps/: format.map
archive/mobstermadness/: mob.cpp
archive/notes/: cursor.txt  gamelevel3.txt  invite.txt  mac2.txt  plan.txt  raylibnotes.txt  scratch.txt
archive/oblivion/: 1000.anm  1000.iff  1500.anm  1500.iff  2000.anm  2000.iff  250.anm  250.iff  500.anm  500.iff  alien1.iff  alien2.iff  alien3.iff  aliendie.bsx  aliendie.sfx  aliendie2.bsx  aliendie2.sfx  alienfire.bsx  alienfire.sfx  alienfire2.bsx  alienfire2.sfx  aliens1.s  aliens10.s  aliens11.s  aliens12.s  aliens13.s  aliens14.s  aliens2.s  aliens3.s  aliens32  aliens4.s  aliens5.s  aliens6.s  aliens7.s  aliens8.s  aliens9.s  alientype.s  angel.anm  angel.iff  anim4.iff  (+226 more)
archive/oblivion/aliens/: aliens2  aliens6
archive/reference/: consoleapi2.h  dos.h  nodes.h  tasks.h  types.h
archive/skidpower/: powtrack  skidmarks
archive/skidpower/gfx/: Beep.iff  Crash1.IFF  Crash2.IFF  Crash3.IFF  ball.spr  chat2.iff  crash4.iff  engine.iff  motor.iff  mouse.iff  screech.iff  sign.iff
archive/skidpower/vehicles/: Caravan.def  Caravan.ecs  cow.def  cow.ecs
archive/skidsource/: husker3.txt  len.inc  segalib.txt
archive/tools/: convertcar.txt
archive/vehicles/: CAMARO.aga  ESCORT.aga  PORSCHE.aga  Police.aga  TRUCK.aga  TRUCK.ecs  cow.aga  cow.ecs  mini.aga  police.ecs  vw.aga
cars/: mini.cng  mini.ecs  mini.spa
docs/: lha.man  steamdocs.txt
mobstermadness/: CmakeLists.txt  mob.cpp
notes/: 101.txt  gamelevel.txt  gamelevel2.txt  log2.txt  notes.txt
raylib/src/: rtext.c
skidtool/: BigMakeLists.txt  CMakeLists.txt  _raydisplay.cpp  bitplane.h  decodecar.h  exec.h  filedecoder.h  freeaudio.cpp  freeaudio.h  loadiff.h  machine.cpp  machine.h  main.cpp  monitor.h  notes.txt  oldmain.cpp  plan.txt  raydisplay.cpp  readme.md  skidkick.h  skidnative.cpp  skidnative.h  skidtool.cpp  steamstub.cpp  steamstub.h  test.cpp  tty_getch.h
skidtool/freeaudio/: freeaudio.cpp  mmdevice.cpp
skidtool/libpng/: ANNOUNCE  AUTHORS  CHANGES  INSTALL  README  configure  png.c  png.h  pngconf.h  pngpriv.h  pngread.c  pngrutil.c  pngtest.c  pngwrite.c
skidtool/musashi/: m68k.h  m68kconf.h  m68kcpu.c  m68kcpu.h  m68kdasm.c  m68kops.c  mmu.h  sim.c  sim.h
skidtool/zlib/: gzguts.h
tools/: convertcaravan.txt
vehicles/: CAMARO.ecs  ESCORT.ecs  Midget.aga  Midget.ecs  PORSCHE.ecs  mini.ecs  vw.ecs
